@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST biosdisk-0.65.tar.gz 136923 RMD160 eaf2ea5bd990615effb5002db86d91988b70b959 SHA1 d7bb00522e73ebf6258467db28b1bf225786137e SHA256 aa94782a9d2ffb0875e1f63674f6dc01187fdbed0f7d50b2989fa9cc143ceaca
 DIST biosdisk-0.75-2.tar.gz 135073 RMD160 bdd4fce31dccb752bfb4e120c313b41034f2ce49 SHA1 26e7e840d49b9834b7cc84bc5e57ba743d2b3c7c SHA256 e5d92b3fd3ae3b438894ab2c1d4cbced3235a1daa4af701dcf6387ddf1946cfd
-EBUILD biosdisk-0.65.ebuild 819 RMD160 162f47f991af2ba6abaa3f8643c836b0b36dd383 SHA1 4fb49fc43660f8f4541b0474be08604da5199dbb SHA256 92ec19121cd886e9b1e77b4dbda7f89451344a00157bc2518a77c312e504c74e
-EBUILD biosdisk-0.75.2.ebuild 935 RMD160 7bb169efd9d28680326a2a39e29670b4fe788f6a SHA1 defcf0667706819db7aa3da53308465920a3113f SHA256 eecfd121aaed44a8792a6f61492eef7dc711ad35fac8c02674b66c4815c6307e
-MISC ChangeLog 1123 RMD160 a052f71dcb1db10f48979900faed3b9cb4c719a0 SHA1 15543147a581fff6ab7c264c752bc39eeb8229a3 SHA256 b2b6d11a5fcadf6e7052737009f431f2a48c0351d0ea308ea3d4b8e4aa13b1db
+EBUILD biosdisk-0.65.ebuild 833 RMD160 3c0373957cb8039878f0bfd5f0911c7c97281dba SHA1 170865f85741ed306a330521be649b2f6e1d4dc8 SHA256 350c98febee9dfd9984e3b5d5e1ec5d4ecc5c590f003c910f8bed3b2b154b269
+EBUILD biosdisk-0.75.2.ebuild 951 RMD160 0e6d5849cc80cad60a8e5581fe4c7c079ffd779d SHA1 9c9e536a5f0a527953f1f30409342b1e892513ed SHA256 6974af370009749f03275b0b6d87c87a7b4a0dc1a7727b098df3254965073e33
+MISC ChangeLog 1256 RMD160 e6523f004aa7648c0546e2c8bfa0bbc97debd0bb SHA1 cb3551fbae5d5359558d53270974d8438fb195cc SHA256 68a4acd5d2b5cd43759f35546f73d5d5aff1f23c33817daeb7646bcaa32b9546
 MISC metadata.xml 233 RMD160 d81ec1a0582856aeac5ef3bfec5c80d9850216f6 SHA1 9b94f113e7f382076b1749c2a856e409c96cade3 SHA256 dce03f6cdd96135caf3c971a5ca4a8c916f44532fe8cfb6df88b7bdade407e8b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAkuns5cACgkQgAnW8HDreRbcBQCgnc2HnSZdMatUZf3JHfA4ELwS
+wSEAn1U9ngB5C2APXccDyuKMqug4tAHr
+=pe7l
+-----END PGP SIGNATURE-----
