@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/biosdisk/biosdisk-0.75.2.ebuild,v 1.1 2008/10/01 10:32:09 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/biosdisk/biosdisk-0.75.2.ebuild,v 1.2 2010/03/22 18:14:42 jlec Exp $
 
 inherit versionator
 
@@ -14,21 +14,19 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
-RDEPEND="app-text/unix2dos
+RDEPEND="
+	|| ( app-text/unix2dos >=app-text/dos2unix-5.0 )
 	sys-boot/syslinux"
 
 src_install() {
-	dosbin biosdisk
-	dosbin blconf
+	dosbin biosdisk blconf || die
 
-	dodoc AUTHORS README README.dosdisk TODO VERSION
-	doman biosdisk.8.gz
+	dodoc AUTHORS README README.dosdisk TODO VERSION || die
+	doman biosdisk.8.gz || die
 
 	insinto /usr/share/biosdisk
-	doins dosdisk.img
-	doins biosdisk-mkrpm-redhat-template.spec
-	doins biosdisk-mkrpm-generic-template.spec
+	doins dosdisk.img biosdisk-mkrpm-{redhat,generic}-template.spec || die
 
 	insinto /etc
-	doins biosdisk.conf
+	doins biosdisk.conf || die
 }
